--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,26 +1,93 @@
-main {
-  align-content: center;
+
+      *{
   box-sizing: border-box;
-  display: grid;
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
-    'Arial', sans-serif;
-  hyphens: auto;
-  line-height: 1.65;
-  margin: 0 auto;
-  max-width: 680px;
-  min-height: 100vh;
-  padding: 72px 0;
-  text-align: center;
 }
-h1 {
-  font-size: 45px;
-}
-h2 {
-  margin-top: 1.5em;
-}
-p {
+       html {
+         font-size: 100%;
+       }
+       body {  
   font-size: 16px;
+  font-size: 1vw;  
+  /* устанавливаем размеры шрифтов по умолчанию, чтобы быть уверенными, что размера в 10 пикселей у нас нигде не будет */
 }
+h1{
+  padding: 0.1vh;
+  margin-left: 0.9vw;
+}
+      ul {
+  list-style: none;
+  padding: 0.1vh;
+  letter-spacing: 0.1vw;
+}
+pre{
+  margin-left: 0.9vw;
+  padding-left: 1vw;
+
+}
+code{
+  background-color: #f3f2f6d6;
+  
+}
+li {
+  padding-left: 1em;
+}
+li#news:before {
+  content: "\f046"; /* FontAwesome Unicode */
+  font-family: FontAwesome;
+  display: inline-block;
+  margin-left: -1em; /* same as padding-left set on li */
+  width: 1em; /* same as padding-left set on li */
+}
+.description1 {
+  display:inline-block;
+        width: 50%;
+        font-size: 1.37vw;  
+        word-wrap: break-word;
+        word-break: normal; /* более приоритетно */
+        margin-left: 0.9vw;
+      }
+      .description2 {
+  display:inline-block;
+        width: 53%;
+        font-size: 1.37vw;  
+        word-wrap:  break-word;
+        word-break: normal; /* более приоритетно */
+        margin-left: 0.9vw;
+        white-space: pre-wrap;
+      }
+
+
+.description3 {
+  word-wrap: normal;
+  font-size: 1.37vw;  
+  margin-left: 0.9vw;
+  width: 50%;
+  background-color: #f3f2f6d6;
+  padding-top: 0.9vw; 
+  padding-bottom: 0.0vw;
+}
+
+table.mytable{
+	width: 100%;
+	border-collapse:collapse;
+	border-spacing:0;
+	height: auto;
+}
+table.mytable,table.mytable td, table.mytable th {
+	border: 1px solid #595959;
+}
+table.mytable td,table.mytable th {
+	padding: 3px;
+	width: 10vw;
+	height: 5vh;
+  text-align: left;
+}
+table.mytable th {
+	background: #347c99; 
+	color: #fff; 
+	font-weight: normal;
+}
+
 a {
   border-bottom: 1px solid white;
   color: #0076ff;
